fixed navbar spacing. need to figure out fonts

--- a/main.css
+++ b/main.css
@@ -4,14 +4,19 @@ body {
 
 .container {
 	background-color: #90C3D4;
+	height: 3000px;
 }
 
+.howdy {
+	font-family: "Caflisch Script", cursive;
+}
 nav {
-	height: 2em;
+	height: 3em;
 	background-color: #B25B00;
 }
 
 nav a {
+	margin: 10px;
 	color: black;
 	text-decoration: none;
 	padding-left: 10px;
